Update to recommended JVM command line options in top level README